fix for too high pages
page min-height was using a px fixed value that was sometimes larger than a mobile screen

--- a/css/onhb11_tarefona.scss
+++ b/css/onhb11_tarefona.scss
@@ -194,7 +194,12 @@ img {
 .pages {
   background: $paper;
   position: relative;
-  min-height: calc(480px * 1.4 - #{$m});
+  @media only screen and (min-width: $mobile) {
+    min-height: calc(480px * 1.4 - #{$m});
+  }
+  @media only screen and (max-width: $mobile) {
+    min-height: calc(100vw * 1.4 - #{$m});
+  }
   &:after {
     width: $m * 2;
     position: absolute;
